# learn-code

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.ghcr.yml  docker-compose.standalone.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  content_issue.md
.github/workflows/: cd.yml  ci.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/learn_code_api/: dependencies.py  errors.py  main.py  update_check.py
apps/api/learn_code_api/adaptive_plan/: planner.py
apps/api/learn_code_api/content/: concepts.py  loader.py  models.py  sample_solution_runner.py  schema_export.py  validator.py
apps/api/learn_code_api/contracts/: __init__.py
apps/api/learn_code_api/ollama/: __init__.py  client.py
apps/api/learn_code_api/progress/: db.py  events.py  migrations.py  rollups.py
apps/api/learn_code_api/routers/: __init__.py  content.py  exercises.py  health.py  lessons.py  paths.py  plan.py  progress.py  quizzes.py  reviews.py  runs.py  sessions.py
apps/api/learn_code_api/runner_broker/: __init__.py  client.py
apps/api/learn_code_api/services/: __init__.py  paths.py  planning.py  reviews.py  runs.py  submissions.py  timed.py
apps/api/tests/: test_api_contracts.py  test_update_check.py
apps/api/tests/adaptive_plan/: test_planner.py
apps/api/tests/content/: test_concepts.py  test_lessons_quizzes.py  test_loader.py  test_models.py  test_paths.py  test_seed_content.py  test_validator.py
apps/api/tests/progress/: test_completions.py  test_path_enrollment.py  test_progress_repository.py
apps/api/tests/services/: test_lookups.py  test_path_level.py
apps/cli/: pyproject.toml
apps/cli/src/learn_code_cli/: __init__.py  config.py  content_validation.py  docker_compose.py  http_client.py  main.py  render.py
apps/cli/tests/: conftest.py  test_commands.py  test_status.py  test_up.py  test_validate_content.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
content/python/paths/: advanced-interview-patterns.yml  ai-engineer-python.yml  algorithm-patterns-1.yml  algorithm-patterns-2.yml  algorithms-specialist.yml  automation-toolkit.yml  backend-and-web-services.yml  bytes-and-numbers.yml  data-structures-in-python.yml  data-without-libraries.yml  debugging-pythonic-habits.yml  generators-and-decorators.yml  greedy-intervals-and-dp.yml  grid-puzzles-and-bits.yml  llm-internals.yml  modern-python.yml  (+14 more)
docs/: architecture.md  content-authoring.md  roadmap.md  runner-security.md
docs/research/: comprehensive-python-topic-map.md  path-structure-research.md
schemas/: content.schema.json
scripts/: check_repo.py  generate_paths.py
services/python-runner/: Dockerfile  harness.py
services/runner-broker/: Dockerfile  pyproject.toml
services/runner-broker/app/: contracts.py  executor.py  exercise_tests.py  main.py  run_manager.py  settings.py
services/runner-broker/tests/: fakes.py  test_contracts.py  test_executor.py  test_exercise_tests.py  test_main.py  test_run_manager.py
services/runner-broker/tests/fixtures/content/python/: add-two-001.yml
(+56 files in other folders)
