[project]
name = "learn-code-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.128.0", "uvicorn[standard]", "pydantic>=2.12", "pyyaml", "httpx"]

[project.optional-dependencies]
test = ["pytest", "pytest-timeout"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
