[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-code-api"
version = "1.4.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.128.0", "uvicorn[standard]", "pydantic>=2.12", "pyyaml", "httpx"]

[project.optional-dependencies]
test = ["pytest", "pytest-timeout"]

[tool.setuptools.packages.find]
include = ["learn_code_api*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
