[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-code-cli"
version = "1.3.0"
requires-python = ">=3.12"
# The CLI is an HTTP client of the Task 5 API (httpx + typer). ``learn-code-api``
# is a dependency only for the one local action, ``validate-content``, which
# reuses the API's content validator. Under the repo venv the root pyproject
# already puts ``apps/api`` on the pythonpath, so no install is required for
# development; the dependency is declared here for standalone installs.
dependencies = ["typer>=0.12", "httpx>=0.27", "learn-code-api"]

[project.optional-dependencies]
test = ["pytest", "respx"]

[project.scripts]
learn-code = "learn_code_cli.main:app"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["learn_code_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
