[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-code-cli"
version = "1.4.1"
requires-python = ">=3.12"
# The CLI is an HTTP client of the Task 5 API (httpx + typer). ``learn-code-api``
# is a dependency only for the one local action, ``validate-content``, which
# reuses the API's content validator. Inside the repo it resolves to the
# workspace member (see [tool.uv.sources]); standalone installs pull it by name.
dependencies = ["typer>=0.12", "httpx>=0.27", "learn-code-api"]

[tool.uv.sources]
learn-code-api = { workspace = true }

[project.optional-dependencies]
test = ["pytest", "respx"]

[project.scripts]
learn-code = "learn_code_cli.main:app"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["learn_code_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
