[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-code-runner-broker"
version = "1.4.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.128.0", "uvicorn[standard]", "pydantic>=2.12", "pyyaml", "docker"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "httpx"]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
